Fix issue with layout on mobile

--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -48,7 +48,7 @@ footer {
 
 			a {
 				color: #5e5e5e;
-				margin: 0.5rem 0.5rem;
+				margin: 0.25rem 0.25rem;
 			}
 
 			a:hover {
